--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,25 @@
 {
-    "manifest_version": 3,
-    "name": "YouTube AI Navigator",
-    "version": "1.0",
-    "description": "Navigate YouTube videos using AI and transcripts.",
-    "permissions": ["activeTab", "scripting", "storage"],
-    "host_permissions": ["https://www.youtube.com/*"],
-    "background": {
-      "service_worker": "background.js"
-    },
-    "action": {
-      "default_popup": "popup.html"
-    },
-    "options_page": "options.html"
+  "manifest_version": 3,
+  "name": "YouTube AI Navigator",
+  "version": "1.0",
+  "description": "Navigate YouTube videos using AI and transcripts.",
+  "permissions": ["activeTab", "scripting"],
+  "host_permissions": ["https://www.youtube.com/*"],
+  "action": {
+    "default_popup": "popup.html"
+  },
+  "background": {
+    "service_worker": "background.js"
+  },
+  "content_scripts": [
+    {
+      "matches": ["https://www.youtube.com/*"],
+      "js": ["contentScript.js"]
+    }
+  ],
+  "icons": {
+    "16": "icons/icon16.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
   }
+}
